# aiogram-arduino-room-climat

./: .env.example  pyproject.toml
aiogram_arduino_room_climat/telegram_bot/: bot.py
aiogram_arduino_room_climat/telegram_bot/config/: config.py
aiogram_arduino_room_climat/telegram_bot/handlers/: handler.py
aiogram_arduino_room_climat/telegram_bot/keyboards/: keyboard.py
aiogram_arduino_room_climat/telegram_bot/lexicon/: lexicon_ru.py
aiogram_arduino_room_climat/telegram_bot/services/: poetry_function.py
aiogram_arduino_room_climat/telegram_bot/services/arduino/: arduino_python_interface.py  arduino_sketch.ino
aiogram_arduino_room_climat/telegram_bot/utils/: logger.py
